src/app/component/snapshots/jedit__app__component__workspace__test__render_preview_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│> root                  ↑││  1 {                                              │"
"│                        █││  2   "key": "value",                              │"
"│                        █││  3   "array": [                                   │"
"│                        █││  4     1,                                         │"
"│                        █││  5     2,                                         │"
"│                        █││  6     [                                          │"
"│                        █││  7       "cat",                                   │"
"│                        █││  8       "dog"                                    │"
"│                        █││  9     ]                                          │"
"│                        █││ 10   ]                                            │"
"│                        █││ 11 }                                              │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        ↓││                                                   │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
