src/app/component/snapshots/jedit__app__component__workspace__test__render_rename_root_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│> root                                                                       ↑│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                           ┌──Invalid selection───┐                          █│"
"│                           │                      │                          █│"
"│                           │ Index cannot be 0    │                          █│"
"│                           │                      │                          █│"
"│                           └────Press any key─────┘                          █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
