src/app/component/snapshots/jedit__app__component__workspace__test__render_rename_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│  root                                                                       ↑│"
"│  └─ web-app                                                                 ║│"
"│>    ├─ servlet                                                              █│"
"│     ├─ servlet-mapping                                                      █│"
"│     └─ taglib                                                               █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│            ┌Rename──────────────────────────────────────────────┐           █│"
"│            │> servlet█                                          │           █│"
"│            └────────────────────────────────────────────────────┘           █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ║│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
