src/app/component/snapshots/jedit__app__component__workspace__test__render_save_dialog_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state,)"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│> root                                                                       ↑│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                           ┌──────────────────────┐                          █│"
"│                           │                      │                          █│"
"│                           │      Write file?     │                          █│"
"│                           │                      │                          █│"
"│                           └─────[Y]es / [N]o─────┘                          █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
